# libspectre

./: ChangeLog  Doxyfile.in  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac  libspectre.pc.in
libspectre/: Makefile.am  Makefile.in  ps.c  ps.h  spectre-device.c  spectre-document.c  spectre-document.h  spectre-exporter-pdf.c  spectre-exporter.h  spectre-gs.c  spectre-gs.h  spectre-macros.h  spectre-page.h  spectre-private.h  spectre-render-context.c  spectre-render-context.h  spectre-status.h  spectre-utils.c  spectre-utils.h  spectre-version.h
test/: Makefile.am  Makefile.in  README  parser-test.c  spectre-test.c  spectre_read_fuzzer.c
